# ChangeLog for media-tv/xdtv
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.39 2006/08/31 08:31:48 flameeyes Exp $

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.3.ebuild:
  Disable x264 support for now, it's not API stable. See bug #145343.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0-r1.ebuild:
  Remove xorg-server fake depend, was an artefact produced by the first dep
  checking scripts.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/xdtv-2.3.2-alevt-vbi.patch,
  -files/xdtv-2.3.2-strict-aliasing.patch, xdtv-2.2.0-r1.ebuild,
  -xdtv-2.3.2.ebuild, -xdtv-2.3.2-r1.ebuild, -xdtv-2.3.2-r2.ebuild,
  xdtv-2.3.3.ebuild:
  Remove old versions and pinpoint virtual/x11 to older than 7 versions.

*xdtv-2.3.3 (05 Jul 2006)

  05 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.3.3.ebuild:
  Bump to version 2.3.3.

*xdtv-2.3.2-r2 (26 Jun 2006)

  26 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/xdtv-2.3.2-alevt-vbi.patch, +xdtv-2.3.2-r2.ebuild:
  Add patch to fix vbi decoding with kernels 2.6.16 and greater. Thanks to Sir
  Pingus in bug #135942.

  26 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +Manifest.asc:
  Regen manifest.

  26 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/xdtv-2.3.2-parallel-install.patch, xdtv-2.3.2-r1.ebuild:
  Add patch to fix installation when using parallel make.

  23 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2-r1.ebuild:
  Replace PIC conditionals with __PIC__ conditionals, as suggested by
  Alexandre Carsac, to try to fix bug #133375.

*xdtv-2.3.2-r1 (18 Jun 2006)

  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/xdtv-2.3.2-strict-aliasing.patch, +xdtv-2.3.2-r1.ebuild:
  Add new revision with patch to fix strict-aliasing breakage.

  04 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild: